--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/jetstream": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.4",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-permission": "^5.11",
         "staudenmeir/eloquent-eager-limit": "^1.8"
     },
     "require-dev": {
