--- a/sql_test/.env.txt
+++ b/sql_test/.env.txt
@@ -1,14 +1,19 @@
 APP_NAME=DoubleGroupUniformidadesAPP
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:wRgOljzIDSslm2o2aqcjfyIZ9jnH7XLiPbKsWswiuwc=
-APP_DEBUG=true
-APP_URL=https://doubleGroupApp2.test
+APP_DEBUG=false
+APP_URL=https://doublegroupuniformidades.pjrphotography.es/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-
+DB_CONNECTION=mysql
+DB_HOST=db5014440557.hosting-data.io
+DB_PORT=3306
+DB_DATABASE=dbs12008071
+DB_USERNAME=dbu1738286
+DB_PASSWORD=k3fp235D-m8f:ju
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
